--- a/less/agency.less
+++ b/less/agency.less
@@ -1,6 +1,7 @@
 @import "variables.less";
 @import "mixins.less";
 
+
 // Global Components
 
 body {
@@ -76,6 +77,7 @@ h1, h2, h3, h4, h5, h6 {
 	border-radius: 3px;
 	font-size: 18px;
 	padding: 20px 40px;
+    pointer-events: auto;
 }
 
 // Custom Navigation Bar
@@ -124,13 +126,13 @@ h1, h2, h3, h4, h5, h6 {
     }
 	.navbar-nav>.active>a {
 		border-radius: 0;
-		color: white;
-		background-color: @brand-primary;
+		color: @brand-primary;
+        background: none;
 	}
 	.navbar-nav>.active>a:hover,
 	.navbar-nav>.active>a:focus {
-		color: white;
-		background-color: darken(@brand-primary, 10%);
+		color: darken(@brand-primary, 10%);
+        background: none;
 	}
 }
 
@@ -172,9 +174,9 @@ header {
 	.intro-text {
 		padding-top: 100px;
 		padding-bottom: 50px;
+
 		.intro-lead-in {
 			.serif-font;
-			font-style: italic;
 			font-size: 22px;
 			line-height: 22px;
 			margin-bottom: 25px;
@@ -196,8 +198,8 @@ header {
 			padding-bottom: 200px;
 			.intro-lead-in {
 				.serif-font;
-				font-style: italic;
-				font-size: 40px;
+				font-size: 22px;
+        font-weight: 200;
 				line-height: 40px;
 				margin-bottom: 25px;
 			}
@@ -225,8 +227,7 @@ section {
 		font-size: 16px;
 		.serif-font;
 		text-transform: none;
-		font-style: italic;
-		font-weight: 400;
+		font-weight: 300;
 		margin-bottom: 75px;
     }
 }
@@ -298,8 +299,8 @@ section {
         	}
         	p {
         		.serif-font;
-        		font-style: italic;
         		font-size: 16px;
+                font-weight: 300;
         		margin: 0;
         	}
         }
@@ -541,6 +542,7 @@ section#contact {
 		margin-bottom: 25px;
 		input,
 		textarea {
+            pointer-events: auto;
 			padding: 20px;
 		}
 		input.form-control {
@@ -582,6 +584,8 @@ section#contact {
 // Footer
 
 footer {
+    float: left;
+    width: 100%;
 	padding: 25px 0;
 	text-align: center;
 	span.copyright {
@@ -721,4 +725,23 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: @brand-primary;
+}
+
+.contact {
+    float: left;
+    width: 100%;
+    position: relative;
+    padding: 0;
+}
+
+.contact-wrapper {
+    position: absolute;
+    top: 200px;
+    left: 0;
+    right: 0;
+    pointer-events: none;
+}
+
+.contact-wrapper h3 {
+    color: #fff;
 }
