--- a/less/mixins.less
+++ b/less/mixins.less
@@ -50,11 +50,11 @@
 // Font Selections
 
 .serif-font() {
-	font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .script-font() {
-	font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
+	font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 
 .body-font() {
