--- a/less/agency.less
+++ b/less/agency.less
@@ -750,3 +750,13 @@ body {
     font-size: 50px;
     padding: 50px;
 }
+
+.pl-logo {
+  width: 45px;
+  margin-right: 10px;
+}
+
+.navbar-brand {
+  padding: 0;
+
+}
