--- a/less/agency.less
+++ b/less/agency.less
@@ -551,6 +551,13 @@ section#contact {
 		textarea.form-control {
 			height: 236px;
 		}
+		input.form-control,
+		textarea.form-control {
+			border-radius: 1px;
+			-webkit-border-radius: 1px;
+			-moz-border-radius: 1px;
+			-ms-border-radius: 1px;
+        }
 	}
 	.form-control:focus {
 		border-color: @brand-primary;
