--- a/less/agency.less
+++ b/less/agency.less
@@ -767,3 +767,11 @@ body {
   padding: 0;
 
 }
+
+
+.contact-inner-wrapper {
+    pointer-events: auto;
+    background: fade(#000, 40%);
+    color: #fff;
+    padding: 25px;
+}
